tests/neg-custom-args/captures/i16114.check
-- Error: tests/neg-custom-args/captures/i16114.scala:18:13 ------------------------------------------------------------
18 |      expect[Cap^] {  // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:24:13 ------------------------------------------------------------
24 |      expect[Cap^] { // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:30:13 ------------------------------------------------------------
30 |      expect[Cap^] {  // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:36:13 ------------------------------------------------------------
36 |      expect[Cap^](io) // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:39:13 ------------------------------------------------------------
39 |      expect[Cap^] { // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
